--- a/hero1/dc/templates/dc/batman.html
+++ b/hero1/dc/templates/dc/batman.html
@@ -28,6 +28,9 @@
         </tr>
         {% endfor %}
     </table>
+
+    {{check}}
+
     <script src="{% static 'dc/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'dc/js/jquery.min.js' %}"></script>
     <script src="{% static 'dc/js/popper.min.js' %}"></script>
