--- a/crud/core/templates/core/batman.html
+++ b/crud/core/templates/core/batman.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'dc/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
     <title>{% block title %}batman{% endblock title %}</title>
 </head>
 <body>
@@ -37,8 +37,8 @@
 
     <a href="{{superman}}"> GO TO SUPERMAN </a>
 
-    <script src="{% static 'dc/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'dc/js/jquery.min.js' %}"></script>
-    <script src="{% static 'dc/js/popper.min.js' %}"></script>
+    <script src="{% static 'core/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'core/js/jquery.min.js' %}"></script>
+    <script src="{% static 'core/js/popper.min.js' %}"></script>
 </body>
 </html>
