--- a/crud/core/templates/core/core.html
+++ b/crud/core/templates/core/core.html
@@ -36,7 +36,7 @@
                         <td>{{i.name}}</td>
                         <td>{{i.heroic_name}}</td>
                         <td>
-                          <a href="" class="btn btn-secondary">Update</a>
+                          <a href="{% url 'update' i.id %}" class="btn btn-secondary">Update</a>
                           <form action="{% url 'delete' i.id %}" method="POST" class="d-inline">
                             {% csrf_token %}
                             <input type="submit" class="btn btn-secondary" value="Delete">
