--- a/crud1/core/templates/core/profile.html
+++ b/crud1/core/templates/core/profile.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Welcome !!!</h1>{{name}}<br>
     <a href="{% url 'logout' %}"><input type="submit" value="logout"></a>
+    <a href="{% url 'pcf' %}"><input type="submit" value="Change Password"></a>
+
 </body>
 </html>
